fix. funct. refactoring,  hover effect, scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     font-family: sans-serif;
     height: 100vh;
-    background-image: linear-gradient(180deg, rgba(1,4,9,1) 0%, rgba(6,45,60,1) 100%);
+    background-image: linear-gradient(180deg, rgba(1, 4, 9, 1) 0%, rgba(6, 45, 60, 1) 100%);
 }
 
 /* Header */
@@ -37,7 +37,6 @@ header h1 {
     padding: 10px;
     border: none;
     outline: none;
-
 }
 .search-button {
     width: 70px;
@@ -45,6 +44,7 @@ header h1 {
     font-size: 14px;
     border: none;
     outline: none;
+    cursor: pointer;
 }
 
 /* Movie container style */
@@ -59,34 +59,52 @@ header h1 {
     overflow-y: auto;
 }
 
+.movie-container::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+}
+.movie-container::-webkit-scrollbar-thumb {
+    background: #ccc;
+    width: 1px;
+    border-radius: 20px;
+}
+
 .movie {
     position: relative;
     margin: 10px;
 }
 
 .movie-poster {
-    position: relative;
     width: 250px;
     height: 400px;
-    transition: opacity .5s;
-   
 }
 
-.movie-poster.active {
-    opacity: .2;
-}
 .movie-details {
     position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
     list-style: none;
     padding: 10px;
-    line-height: 20px;;
+    line-height: 20px;
     font-size: 14px;
+    background: rgba(0, 0, 0, .8);
     color: #fff;
-    display: none;
-    z-index: 1;
+    opacity: 0;
+    transition: opacity .4s;
+}
+
+.movie-details:hover {
+    opacity: 1;
+}
+
+.movie-details span {
+    font-weight: 200;
+    color: #ddd;
 }
 
 .movie-rating i {
@@ -97,11 +115,10 @@ header h1 {
 }
 
 .movie-excerpt::after {
-    content: '...';
+    content: "...";
 }
 
-
-/* flag icons style */ 
+/* flag icons style */
 .flag {
     width: 20px;
     height: auto;
